--- a/scroller-4-iscroll/package.json
+++ b/scroller-4-iscroll/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "fuck-scroller",
+  "name": "scroller-4-iscroll",
   "version": "1.0.0",
-  "description": "PC and Moblie scrollers are quite annoying for me for a long time. Now, it's time to conquer, crush and tame it.",
-  "main": "index.js",
-  "author": "Bowen Zhong <bz4e14@soton.ac.uk>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
